--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  /* background: white;j */
 }
 
 .nav_items {
@@ -22,4 +23,22 @@
   align-items: center;
   display: flex;
   gap: 30px;
+}
+
+.navInp_and_btn input{
+ padding: 20px;
+ border: none;
+ outline: none;
+ border-radius: 10px;
+ background: #ADEED9;
+ font-size: 20px;
+ color: black;
+}
+.navInp_and_btn button{
+   padding: 18px;
+ border: none;
+ border-radius: 10px;
+ background: #00f6a8;
+ outline: none; font-size: 20px;
+ color: black;
 }
